# train-barrier-firmware

./: .gitmodules  CMakeLists.txt  sdkconfig
main/: CMakeLists.txt  main.c  main.cpp
